syntax = "proto3";


option java_multiple_files = true;
option java_package = "com.penguin.api";
option java_outer_classname = "HelloProto";

service Hello {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    rpc StreamHello (HelloRequest) returns (stream HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}